# dataclass-dsl

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: INTERNALS.md
docs/guides/: cli_framework.md  concepts.md  ide_support.md
docs/spec/: SPECIFICATION.md
examples/aws_s3_log_bucket/: README.md  __init__.pyi  bucket.py  pyproject.toml  storage.py
examples/dsl-simple/: README.md  pyproject.toml
examples/dsl-simple/src/my_fancy_dsl/: __init__.py
examples/dsl-simple/src/my_fancy_dsl/things/: __init__.py  __init__.pyi  thing1.py  thing2.py  thing3.py
examples/dsl-simple/tests/: __init__.py  test_my_fancy_dsl.py
src/dataclass_dsl/: __init__.py  _cli.py  _decorator.py  _inspect.py  _ir.py  _loader.py  _stubs.py
src/dataclass_dsl/_importer/: topology.py
tests/: test_attr_ref.py  test_decorator.py  test_loader.py
