[project]
name = "aws-s3-log-bucket"
version = "0.1.0"
description = "Example S3 log bucket using wetwire-aws"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "wetwire-aws",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
