[project]
name = "my-fancy-dsl"
version = "0.1.0"
description = "Example DSL using dataclass-dsl"
requires-python = ">=3.11"
dependencies = [
    "dataclass-dsl>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_fancy_dsl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
